Create the about project section

--- a/reactavancado-api/api/landing-page/models/landing-page.settings.json
+++ b/reactavancado-api/api/landing-page/models/landing-page.settings.json
@@ -39,6 +39,11 @@
       "type": "component",
       "repeatable": false,
       "component": "page.button"
+    },
+    "sectionAboutProject": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.section-about-project"
     }
   }
 }
