--- a/reactavancado-api/api/landing-page/models/landing-page.settings.json
+++ b/reactavancado-api/api/landing-page/models/landing-page.settings.json
@@ -49,6 +49,11 @@
       "type": "component",
       "repeatable": false,
       "component": "page.section-tech"
+    },
+    "sectionConcepts": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.section-concepts"
     }
   }
 }
