--- a/reactavancado-api/api/landing-page/models/landing-page.settings.json
+++ b/reactavancado-api/api/landing-page/models/landing-page.settings.json
@@ -54,6 +54,12 @@
       "type": "component",
       "repeatable": false,
       "component": "page.section-concepts"
+    },
+    "sectionModules": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.section-modules",
+      "required": true
     }
   }
 }
