--- a/reactavancado-api/api/landing-page/models/landing-page.settings.json
+++ b/reactavancado-api/api/landing-page/models/landing-page.settings.json
@@ -60,6 +60,16 @@
       "repeatable": false,
       "component": "page.section-modules",
       "required": true
+    },
+    "sectionAgenda": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.section-agenda"
+    },
+    "pricingBox": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.price-box"
     }
   }
 }
