Create the about us section

--- a/reactavancado-api/api/landing-page/models/landing-page.settings.json
+++ b/reactavancado-api/api/landing-page/models/landing-page.settings.json
@@ -70,6 +70,11 @@
       "type": "component",
       "repeatable": false,
       "component": "page.price-box"
+    },
+    "sectionAboutUs": {
+      "type": "component",
+      "repeatable": false,
+      "component": "page.section-about-us"
     }
   }
 }
